put menu content in body to avoid z-index issue with header

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,7 @@
 .about {
   padding-bottom: 0rem;
   background: white;
+  padding-top: 4rem;
   .breadCrumbs {
     position: absolute;
     top: 3%;
