--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -50,6 +50,7 @@
     font-weight: bold;
     text-align: center;
     padding: 0 1rem;
+    padding-top: 7rem;
     text-transform: uppercase;
   }
   .title_txt_container {
