--- a/scss/main.scss
+++ b/scss/main.scss
@@ -81,17 +81,23 @@ header {
   display: flex;
   flex-direction: column;
   position: fixed;
-  z-index: 2;
+  z-index: 0;
   width: 100%;
-  height: 100%;
+  height: 80px;
 }
 
 // togle menu visibility set
 
 .landing_menu{
   visibility:hidden;
+  display: none;
+  height: 0;
+  padding: 0;
   &.open {
     visibility: visible;
+    height: 100%;
+    z-index: 9999;
+    display: flex;
   }
 }
 
